2008-03-25  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el: Update copyright.

2008-03-25  Roland Winkler  <Roland.Winkler@physik.uni-erlangen.de>

	* proced.el: New file.

2008-03-25  Tetsurou Okazaki  <okazaki@be.to>  (tiny change)

	* emacs-lisp/byte-opt.el (side-effect-free-fns): Fix typo.

2008-03-25  Juri Linkov  <juri@jurta.org>

	* battery.el: Add file cookie coding:iso-8859-1 for the degree sign
	in battery-mode-line-format.

	* bindings.el (minibuffer-local-map): For the command
	file-cache-minibuffer-complete replace keymap minibuffer-local-map
	with map which is already locally bound to minibuffer-local-map.

2008-03-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (map-keymap-sorted): Rename from map-keymap-internal.
	Remove `sort-first' argument.

	* subr.el (redisplay-end-trigger-functions)
	(window-redisplay-end-trigger, set-window-redisplay-end-trigger)
	(process-filter-multibyte-p, set-process-filter-multibyte):
	Mark as obsolete.

2008-03-25  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/re-builder.el (reb-mode-common): Remove reference to
	bogus variable `reb-kill-buffer'; don't make hooks buffer-local,
	use the LOCAL arg of `add-hook'.
	(reb-blink-delay, reb-mode-hook, reb-re-syntax, reb-auto-match-limit):
	Remove spurious * from defcustom docstrings.
	(reb-next-match, reb-prev-match, reb-enter-subexp-mode):
	Fix typos in messages.
	(reb-mode-buffer-p): New function.
	(re-builder, reb-kill-buffer): Use `reb-mode-buffer-p'.  Use `when'.
	(top, reb-show-subexp, reb-auto-update, reb-auto-update)
	(reb-delete-overlays, reb-cook-regexp, reb-update-regexp)
	(reb-update-overlays): Use `unless', `when'.
	(re-builder-unload-function): New function.

2008-03-25  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hooks.el (vc-state): Add documentation for 'missing.

2008-03-25  Wilson Snyder  <wsnyder@wsnyder.org>

	* progmodes/verilog-mode.el (verilog-auto-output)
	(verilog-auto-input, verilog-auto-inout, verilog-auto)